--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,29 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Assignment Starter</title>
+  <title>04 Advanced CSS</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="./stylesheets/main.css">
+  <link rel="stylesheet" href="./stylesheets/layout.css">
+  <link rel="stylesheet" href="./stylesheets/colors.css">
 </head>
 
 <body>
   <!--  Your HTML goes here-->
-  <h1>Welcome to WEB 1400!!!!!</h1>
-<script type="module" src="./javascripts/main.js"></script>
+  <header>
+    <h1>Island Webpage</h1>
+  </header>
+  <main>
+    <section>
+      <a href="https://unsplash.com/photos/photography-of-island-against-sky-WScpndZFrOM?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" alt="Island Image"><img class="img" src="images/marek-okon-WScpndZFrOM-unsplash.jpg"></a>     
+      <caption>
+        <p class="pull-right clearfix">Caption</p>
+      </caption>
+    </section>
+  </main>
+  <footer>
+    <br>
+    <p>Photo by <a href="https://unsplash.com/@marekokon?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Marek Okon</a> on <a href="https://unsplash.com/photos/photography-of-island-against-sky-WScpndZFrOM?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></p>
+  </footer>
+  <script type="module" src="./javascripts/main.js"></script>
 </body>
 </html>
