--- a/src/index.html
+++ b/src/index.html
@@ -14,14 +14,23 @@
   <header>
     <h1>Island Webpage</h1>
   </header>
+  <nav>
+    <a href="index.html">Homepage</a>
+  </nav>
+  <hr>
+  <br>
   <main>
     <section>
-      <a href="https://unsplash.com/photos/photography-of-island-against-sky-WScpndZFrOM?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" alt="Island Image"><img class="img" src="images/marek-okon-WScpndZFrOM-unsplash.jpg"></a>     
-      <caption>
-        <p class="pull-right clearfix">Caption</p>
-      </caption>
-    </section>
+      <figure class="pull-left clearfix">
+        <a href="https://unsplash.com/photos/photography-of-island-against-sky-WScpndZFrOM?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" alt="Island Image"><img class="img" src="images/marek-okon-WScpndZFrOM-unsplash.jpg"></a>     
+        <figcaption style="padding-left: 21.5rem;">Picture of an island in Chuuk Lagoon.</figcaption>
+      </figure>
+      </section>
   </main>
+  <aside class="pull-right clearfix">
+    <div class="vl"></div>
+    <p>Aside</p>
+  </aside>
   <footer>
     <br>
     <p>Photo by <a href="https://unsplash.com/@marekokon?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Marek Okon</a> on <a href="https://unsplash.com/photos/photography-of-island-against-sky-WScpndZFrOM?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></p>
