Fiiiiinally has the correct layout

--- a/src/index.html
+++ b/src/index.html
@@ -24,13 +24,24 @@
       <figure class="pull-left clearfix">
         <a href="https://unsplash.com/photos/photography-of-island-against-sky-WScpndZFrOM?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" alt="Island Image"><img class="img" src="images/marek-okon-WScpndZFrOM-unsplash.jpg"></a>     
         <figcaption style="padding-left: 21.5rem;">Picture of an island in Chuuk Lagoon.</figcaption>
+        <br>
+        <hr width="249.25%">
+        <br>
+        <article style="text-align: center;">
+          <h2>Article Header</h2>
+          <p>Article/Main Content</p>
+        </article>
       </figure>
       </section>
+    <aside class="pull-right clearfix" id="topaside" style="text-align: center; width: 925px;">
+      <h2>Header #2 (Maybe Famous Islands?)</h2>
+      <p>Temp. Text</p>
+    </aside>
+    <aside class="pull-right clearfix" id="bottomaside" style="text-align: center; width: 925px;">
+      <h2>Header #3</h2>
+      <p>Temp. Text</p>
+    </aside>
   </main>
-  <aside class="pull-right clearfix">
-    <div class="vl"></div>
-    <p>Aside</p>
-  </aside>
   <footer>
     <br>
     <p>Photo by <a href="https://unsplash.com/@marekokon?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Marek Okon</a> on <a href="https://unsplash.com/photos/photography-of-island-against-sky-WScpndZFrOM?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></p>
